# autognomy

./: .gitignore  README.md  TODO.md  aesthetic.sh  autognomy.cabal  autognomy.sh  build.sh  cabal.project  haskell-install.sh  keybindings.md  makeover.sh  project-manager.sh  requirements.txt  run-startup.sh
app/: Install.hs  Main.hs
categoread/: ChangeLog.md  README.md  categoread.cabal  package.yaml
categoread/src/: Main.hs
cheatsheet/: cheat.py  tmux.json
config-manager/: ChangeLog.md  README.md  TODO.md  config-manager.cabal  package.yaml
config-manager/src/: Export.hs  Import.hs  Main.hs
configs/: base.sh  bash_aliases  create_shared_folder.sh  index.json  installs.txt  special-installs.sh
configs/cielConfigs/: extensions.sh
configs/madoConfigs/: extensions.sh
configs/netConfigs/: extensions.sh
configs/sennConfigs/: extensions.sh  install_prelude.sh  installs.txt  run_custom.txt
configs/sublime-text/: Default (Linux).sublime-keymap  Package Control.sublime-settings  Preferences.sublime-settings
configs/ybConfigs/: flat_remix_install.sh  google_chrome_install.sh  installs.txt  run_custom.txt
dotfiles/: .tmux.conf  emacs_dotfile
email-helper/: emails.hs  emails.py
everyday/: installs.txt  main.py
fanfic-manager/: README.md  faster_works.py  fics.md  m4l.json  m4l.txt  main.py  requirements.txt
fanfic-manager/src/: fic.py  main.py
fun/: chars.txt
git-workflows/: personal.sh
hashtag-aesthetic/: README.md  hashtag-aesthetic.cabal
hashtag-aesthetic/app/: Main.hs
hashtag-aesthetic/src/Aesthetic/: AestheticAPI.hs  DataLoader.hs
hashtag-aesthetic/src/Aesthetic/Apply/: GTKApply.hs  SublimeApply.hs
hashtag-aesthetic/src/Aesthetic/Core/: Aesthetic.hs
hashtag-aesthetic/src/Aesthetic/Types/: GTKTypes.hs  SublimeTypes.hs
kittens-game/: KittensGame.hs
pretty/: dark.json  kw_default.json  pure.json
pretty/cieltechno/: Preferences.sublime-settings  cieltechno.json
pretty/cieltechno/personal/: custom.el
pretty/cieltechno/personal/preload/: preload.el
pretty/dark/: Package Control.sublime-settings  Preferences.sublime-settings  dark.json
pretty/doka-dark/: Preferences.sublime-settings  senn.json
pretty/doka-light/: Anaconda.sublime-settings  sublime.json
pretty/kw/: Package Control.sublime-settings  kw.json
pretty/kw/personal/: custom.el  prelude-modules.el
pretty/kw/personal/preload/: preload.el
pretty/kwInTheSun/: Preferences.sublime-settings  kwInTheSun.json  sublime.json
pretty/kwInTheSun/personal/preload/: preload.el  preload.el~
pretty/net/: Default (Linux).sublime-keymap  Preferences.sublime-settings  net.json
pretty/yb/: Package Control.sublime-settings  Preferences.sublime-settings  yb.json
project-manager/: ChangeLog.md  README.md  project-manager.cabal
project-manager/app/: Main.hs
src/: Aesthetic.hs  AutoSetup.hs  GTKTypes.hs  GetTheSpecs.hs  Lib.hs  SublimeTypes.hs  Types.hs  Utils.hs
src/Aesthetic/: AestheticAPI.hs  DataLoader.hs
src/Aesthetic/Apply/: GTKApply.hs
startup/: ChangeLog.md  README.md  package.yaml  startup.cabal
startup/src/: Main.hs  add_an_user.sh
tutorials/: chpc.md  global_everything.md  tmux_cheatsheet.md
worklogs/: 12_august_22.md
