name:                autognomy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AdLucem/autognomy#readme
license:             BSD3
license-file:        LICENSE
author:              Atreyee Ghosal
maintainer:          ghosalatreyee@gmail.com
copyright:           2019 Atreyee Ghosal
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , GTKTypes
                     , SublimeTypes
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable autognomy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , autognomy
  default-language:    Haskell2010

test-suite autognomy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , autognomy
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AdLucem/autognomy
