name:                hashtag-aesthetic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AdLucem/autognomy#readme
license:             BSD3
license-file:        LICENSE
author:              Atreyee Ghosal
maintainer:          ghosalatreyee@gmail.com
copyright:           2019 Atreyee Ghosal
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/Aesthetic
                     , src/Aesthetic/Apply
                     , src/Aesthetic/Core
                     , src/Aesthetic/Types
  exposed-modules:     AestheticAPI
                     , DataLoader
                     , Types
                     , GTKTypes
                     , SublimeTypes
                     , Aesthetic
                     , GTKApply
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , aeson
                     , bytestring
                     , text
  default-language:    Haskell2010

executable hashtag-aesthetic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hashtag-aesthetic 
  default-language:    Haskell2010

test-suite hashtag-aesthetic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , autognomy
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AdLucem/autognomy
