name:                hashtag-aesthetic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AdLucem/autognomy#readme
license:             BSD3
author:              Atreyee Ghosal
maintainer:          ghosalatreyee@gmail.com
copyright:           2019 Atreyee Ghosal
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/Aesthetic
                     , src/Aesthetic/Apply
                     , src/Aesthetic/Core
                     , src/Aesthetic/Types
  exposed-modules:     AestheticAPI
                     , DataLoader
                     , Types
                     , GTKTypes
                     , SublimeTypes
                     , Aesthetic
                     , GTKApply
                     , SublimeApply
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , aeson
                     , bytestring
                     , text
                     , directory
  default-language:    Haskell2010

executable hashtag-aesthetic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hashtag-aesthetic 
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/AdLucem/autognomy
