name:                project-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AdLucem/autognomy#readme
license:             BSD3
license-file:        LICENSE
author:              Atreyee Ghosal
maintainer:          ghosalatreyee@gmail.com
copyright:           2019 Atreyee Ghosal
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

--library project-manager
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

executable project-manager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , split
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/AdLucem/autognomy
